# Vagabond

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: search.py
backend/app/core/: routing.py  scoring.py
backend/app/models/: database.py  poi.py
backend/scripts/: import_osm.py  seed_test_data.py  test_routing.py
config/: graphhopper.yml
