[project]
name = "vagabond-backend"
version = "0.1.0"
description = "Vagabond - Offline-First Outdoor POI Search Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "geoalchemy2>=0.17.0",
    "osmium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]